--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,127 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.nav{
+/* position: absolute; */
+width: 100%;
+height: 75px;
+left: 0px;
+top: 0px;
+background: #F55A5A;
+}
+
+.nav-logo{
+position: absolute;
+width: 24px;
+height: 24px;
+background: #DADADA;
+border-radius: 15px;
+left: 600px;
+top: 25px;
+
+}
+
+.nav-title{
+font-family: 'Inter';
+font-style: normal;
+font-weight: bold;
+font-size: 24.4608px;
+line-height: 18px;
+letter-spacing: -0.000075em;
+
+position: absolute;
+left: 634px;
+top: 10px;
+color: #FFFFFF;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+.card{
+  display: inline-block;   
+
+}
+
+.card-main{
+  width: 800px; 
+  margin-top: 70px;
+  float: right;
+  padding-left: 60px;
+}
+
+.card-img .card-main{
+  float: left;
+}
+
+.card-img{
+width: 250px;
+height: 320px;
+margin-left: 120px;
+margin-top: 70px;
+border-radius: 9px;
+margin-bottom: 9px;
+}
+
+.card-stats {
+  gap: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-place{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 100;
+font-size: 25px;
+line-height: 30%;
+color: #2B283A;
+}
+
+.card-map{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15.24px;
+  line-height: 2px;
+  color: #918E9B;
+  padding-left: 18px;
+}
+
+.card-name{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 10px; 
+  color: #2B283A;
+  margin-top: 0%;
+  margin-bottom: 60px;
+}
+
+.card-date{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 17.24px;
+line-height: 22px;
+color: #2B283A;
+}
+
+.card-title{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15.24px;
+line-height: 150%;
+/* or 15px */
+color: #2B283A;
 }
